# libjoystick

./: README.md  meson.build  meson_options.txt
doc/: libjoystick.doxygen.in  meson.build
examples/: enumeration.c  gamepads.c
src/: libjoystick.h  libjoystick.sym
test/: build-c.c  build-cxx.cc
